--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>Redirecting to Tetris...</title>
-    <meta http-equiv="refresh" content="0; url=tetris.html">
+    <meta http-equiv="refresh" content="0; url=Tetris.html">
     <link rel="canonical" href="tetris.html">
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="tetris.html">link to Tetris</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="Tetris.html">link to Tetris</a>.</p>
 </body>
 </html>
