update to capital 'T' for 'Tetris.html 2nd try

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Redirecting to Tetris...</title>
     <meta http-equiv="refresh" content="0; url=Tetris.html">
-    <link rel="canonical" href="tetris.html">
+    <link rel="canonical" href="Tetris.html">
 </head>
 <body>
     <p>If you are not redirected automatically, follow this <a href="Tetris.html">link to Tetris</a>.</p>
