disable double touch zoom for IOS players

--- a/Tetris.html
+++ b/Tetris.html
@@ -24,6 +24,7 @@
             color: #0F380F;
             overflow: hidden;
             overscroll-behavior: none;
+            touch-action: manipulation; /* <= ADD THIS LINE to prevent zoom on IOS*/
         }
 
         #scaler-wrapper {
